✨[Feat] 공통 레이아웃 UI 구현

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>MoWo(모우)</title>
+    <link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
